--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,17 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
-  }
+    "express": "^4.19.2",
+    "firebase-admin": "^12.2.0"
+  },
+  "author": "",
+  "license": "ISC"
 }
