--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   frontend:
     build: ./frontend
@@ -8,13 +7,15 @@ services:
       - CHOKIDAR_USEPOLLING=true 
       - WATCHPACK_POLLING=true 
       - FAST_REFRESH=false
-      - WDS_SOCKET_PORT=30000
-      - FIREBASE_TOKEN=${FIREBASE_TOKEN}
+      - WDS_SOCKET_PORT=3000
+      - REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
+
     volumes:
       - ./frontend:/app
-      - /app/node_modules
     depends_on:
       - backend
+    env_file:
+      - ./.env
 
   backend:
     build: ./backend
@@ -22,6 +23,8 @@ services:
       - "4000:4000"
     volumes:
       - ./backend:/app
-      - /app/node_modules
+    environment:
+      - NODE_ENV=production
+      - FIREBASE_SERVICE_ACCOUNT_KEY=${FIREBASE_SERVICE_ACCOUNT_KEY}
     env_file:
-      - ./backend/.env
+      - ./.env
