--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "firebase-admin": "^12.2.0"
+    "firebase-admin": "^12.2.0",
+    "react-modal": "^3.16.1"
   },
   "author": "",
   "license": "ISC"
